--- a/templates/outlet/index.html
+++ b/templates/outlet/index.html
@@ -1,55 +1,124 @@
 {% extends 'outlet/base.html' %}
-
+{% load static %}
 {% block body %}
+
  
 <div class="row " style="margin-top: 90px;"></div>
 
 
 <!-- ==============================Carousel Start================================ -->
-{% for o in allprod %}
-
-<!-- <div class="page-content page-container" id="page-content">
-    <div class="padding"> -->
 <div class="container-fluid">
-  <h4 class="CH text-center mb-5">Product Listing Page! Click to see the details.</h4>
-  <div class="col-lg-12 grid-margin stretch-card">
-    <div class="owl-carousel">
-      <div class="item">
-        <div class="card">
-          <img class="card-img-top img-fluid" src="/media/{{ o.image }}" alt="Card image cap">
-          <div class="card-body" style="padding-left: 35px;  padding-right: 35px;"> 
-            <a href="/outlet/productview/{{o.id}}" style="text-decoration: none; color: darkslategray;">
-              <h6 class="card-title" id="namepr{{o.id}}">{{ o.product_name|slice:'0:30'}}..
-              </h6>
-            </a>
-            <div class="input-group-append">
-            <p class="card-text mb-3"> Quantity: {{o.quantity}}<small class="text-muted"></small</p>
+  <h3 class="CH text-center mb-5">Product Listing Page! Click to see the details.</h3>
+  
+ <!--        carousel indicators starts from here-->
 
-              <a href="/outlet/productview/{{o.id}}">
-                <button id="pv{{ o.id }}" type="button" data-toggle="tooltip" title="View Details" class="btn btn-primary btn-sm ml-5">Detail <i class="fa fa-eye"></i>
-                </button>
-              </a>
-         
-             
-            </div>
+<div class="container" xmlns:data="http://www.w3.org/1999/xhtml">
+  <div id="demo" class="carousel slide my-3" data-ride="carousel">
+      <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+  {% for i in range %}
+     <li data-target="#demo" data-slide-to="{{i}}" ></li>
+  {% endfor %}
+</ul>
+   <div class="carousel-inner">
+  <div class="carousel-item active">
 
-          </div>
+      <div class="col-xs-3 col-sm-3 col-md-3">
+        <div class="card mx-4" style="width: 18rem;">
+          <img  src='/media/{{product.0.image}}' class="card-img-top" alt="...">
+          <div class="card-body">
+        <a href="/outlet/productview/{{product.0.id}}" style="text-decoration: none; color: darkslategray;">    <h5 class="card-title">{{ product.0.product_name }}</h5>
+            <div class="input-group-append"> </a>
+            <p class="card-text" style="background: bisque;">Quantity: {{ product.0.quantity }}</p>
+            <a href="/outlet/productview/{{product.0.id}}" class="btn btn-primary ml-5"><i class="fa fa-eye"></i></a>
+          </div></div>
         </div>
-
       </div>
-   
-    </div>
-  </div>
-</div>
-<!-- </div>
-</div> -->
-{% endfor %}
 
+      {% for i in product|slice:"1:" %}
+      <div class="col-xs-3 col-sm-3 col-md-3">
+        <div class="card mx-4" style="width: 18rem;">
+          <img src='/media/{{i.image}}' class="card-img-top" alt="...">
+          <div class="card-body">
+            <a href="/outlet/productview/{{i.id}}" style="text-decoration: none; color: darkslategray;">  <h5 class="card-title">{{ i.product_name |slice:'0:30'}}</h5>
+            <div class="input-group-append"> </a>
+            <p class="card-text" style="background: bisque;">Quantity: {{i.quantity}}</p>
+            <a href="/outlet/productview/{{i.id}}" class="btn btn-primary ml-5"><i class="fa fa-eye"></i></a>
+          </div></div>
+          
+        </div>
+      </div>
+
+          {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
+           </div><div class="carousel-item">
+          {% endif%}
+
+          {% endfor %}
+    </div>
+
+    </div>
+      </div>
+
+<a class="carousel-control-prev " href="#demo" role="button" data-slide="prev">
+ <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+  <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#demo" role="button" data-slide="next">
+  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+
+    
+</div>
 <!-- ==============================Carousel End================================ -->
 {% endblock %}
 
 {% block CSS %}
 <style>
+  .col-md-3 img {
+            width: 230px;
+            height: 300px;
+        }
+   .col-md-3 {
+            display: inline-block;
+            margin-left: -4px;
+        }
+
+        .col-md-3 {
+            width: 100%;
+            height: auto;
+        }
+
+
+
+        body .no-padding {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .carousel-control-prev-icon {
+            background: black no-repeat center center;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+        }
+
+        .carousel-control-next-icon {
+            background: black no-repeat center center;
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+
+        }
+        body .carousel-indicators{
+        bottom:-50px;
+        }
+
+        .carousel-indicators .active{
+        background-color: blue;
+        }
+
+
+/* removing blue outline from buttons */
+button:focus, button:active {
+   outline: none;
+}
   .CH{
     margin-top: 40px;  color: #343a40;
   font-family: 'Architects Daughter', cursive;  font-weight: 600;
@@ -180,23 +249,30 @@ color: white;
 <script>
 
   // =======================Carousel=========================================
-  $(document).ready(function () {
+  $(document).ready(function() {
+  $("#myCarousel").on("slide.bs.carousel", function(e) {
+    var $e = $(e.relatedTarget);
+    var idx = $e.index();
+    var itemsPerSlide = 4;
+    var totalItems = $(".carousel-item").length;
 
-    $(".owl-carousel").owlCarousel({
-      autoPlay: 3000,
-      items: 4,
-      itemsDesktop: [1199, 3],
-      itemsDesktopSmall: [979, 3],
-      center: true,
-      nav: true,
-      loop: true,
-      responsive: {
-        600: {
-          items: 1
+    if (idx >= totalItems - (itemsPerSlide - 1)) {
+      var it = itemsPerSlide - (totalItems - idx);
+      for (var i = 0; i < it; i++) {
+        // append slides to end
+        if (e.direction == "left") {
+          $(".carousel-item")
+            .eq(i)
+            .appendTo(".carousel-inner");
+        } else {
+          $(".carousel-item")
+            .eq(0)
+            .appendTo($(this).find(".carousel-inner"));
         }
       }
-    });
+    }
   });
+});
   // =======================Caraousel Ends=============================================
 </script>
 {% endblock %}
